[package]
name = "icfp-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
crossbeam = "0.8.2"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
z3 = { version = "0.11.2", features = ["static-link-z3"] }
