[package]
name = "icfp-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
bevy = "0.10.1"
clap = { version = "4.3.11", features = ["derive", "env"] }
colorous = "1.0.11"
crossbeam = "0.8.2"
dotenvy = "0.15.7"
indicatif = "0.17.5"
mincost = { git = 'https://github.com/jakeswenson/mincost.git', branch = 'main' }
multimap = "0.9.0"
num = "0.4.0"
parry2d = "0.13.5"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = { version = "1.0.100" }
simulated_annealing = "0.2.1"
thiserror = "1.0.43"
z3 = { version = "0.11.2", features = ["static-link-z3"] }

[patch.'https://github.com/jakeswenson/mincost.git']
mincost = { path = "../mincost" }
